Feat: atualização do swagger
